--- a/roadmap/src/agg_support/Makefile
+++ b/roadmap/src/agg_support/Makefile
@@ -1,12 +1,19 @@
 
+TOP = ..
+include $(TOP)/options.mk
+
 # stub makefile -- sole purpose is to assist building tarball distributions
 
 SOURCE = \
-	Makefile roadmap_canvas.cpp
+	roadmap_canvas.cpp
 
 HEADERS = \
 	roadmap_canvas_agg.h
 
 sourcelist:
-	@echo $(SOURCE) $(HEADERS)
+	@echo Makefile $(SOURCE) $(HEADERS)
 
+depends:
+	$(MAKEDEPS) -Y -f - $(SOURCE) > .depends.mk 2>/dev/null
+
+-include .depends.mk
