--- a/roadmap/src/qt/Makefile
+++ b/roadmap/src/qt/Makefile
@@ -27,6 +27,8 @@ endif
 
 # --- QT sources & targets --------------------------------------------
 
+OTHER_SOURCE = roadmap_main.cc roadmap_canvas.cc  
+
 MOC_RMLIBSRCS = \
 	qt_main.cc \
 	qt_canvas.cc \
@@ -65,7 +67,7 @@ TARGETS = qtroadgps qtroadmap
 all: $(TARGETS)
 
 clean:
-	rm -f *.o *.a *.da $(TARGETS) moc_qt_*.cc
+	rm -f *.o *.a *.da $(TARGETS) moc_qt_*.cc .depends.mk
 
 strip:
 	$(STRIP) $(TARGETS)
@@ -93,7 +95,7 @@ uninstall:
 	cd $(bindir) && rm -f $(TARGETS) roadmap roadgps
 
 sourcelist:
-	@echo Makefile roadmap_main.cc roadmap_canvas.cc $(SOURCE) $(HEADERS)
+	@echo Makefile $(OTHER_SOURCE) $(SOURCE) $(HEADERS)
 
 # temporary
 roadmap_canvas_agg.o:
@@ -131,3 +133,8 @@ moc_qt_dialog.cc: qt_dialog.h
 moc_qt_fileselection.cc: qt_fileselection.h
 	$(MOC) qt_fileselection.h -o moc_qt_fileselection.cc
 
+
+depends:
+	$(MAKEDEPS) -Y -f - $(RMLIBSRCS) $(OTHER_SOURCE) > .depends.mk 2>/dev/null
+
+-include .depends.mk
