send the dependency warning to stderr (so it doesn't corrupt "make sourcelist")

--- a/roadmap/src/Makefile
+++ b/roadmap/src/Makefile
@@ -604,6 +604,6 @@ depends:
 	done
 
 .depends.mk:
-	@echo "Note: run 'make depends' to create dependency files"
+	@echo "Note: run 'make depends' to create dependency files" >&2
 
 -include .depends.mk
