Commit my buildmap/buildus work for dealing with the ISO map organisation I'm proposing. This is work in progress (but it works for me). Committing it into CVS so it is easier to get feedback about it and for others to gain experience.

--- a/roadmap/src/Makefile
+++ b/roadmap/src/Makefile
@@ -47,7 +47,8 @@ RMLIBSRC = roadmap_log.c \
 	roadmap_state.c \
 	roadmap_gpx.c \
 	roadmap_linefont.c \
-	roadmap_lang.c
+	roadmap_lang.c \
+	roadmap_iso.c
 
 RMLIBOBJS = $(RMLIBSRC:.c=.o)
 
@@ -206,6 +207,7 @@ BMHEADERS = \
 	buildmap_tiger.h \
 	buildmap_zip.h \
 	buildus_county.h \
+	roadmap_iso.h \
 	buildus_fips.h
 
 XCHGHEADERS = \
