major documentation refactoring.  "chapters", written in txt2tags format, are now under the doc subdirectory, and are presented on the web in some cases as standalone docs, and in other cases combined. and

--- a/roadmap/web/Makefile
+++ b/roadmap/web/Makefile
@@ -1,19 +1,11 @@
 
 # all this does is make it easier to keep the website in sync
 
-default: all
+all: webdoc
 
-APT_WEBDOCS = \
 
-T2T_WEBDOCS = \
-	manual.html \
-	buglist.html \
-	status.html \
-	todolist.html \
-	installation.html \
-	changelog.html \
-	makemaps.html
-
+# These are the NON-txt2tags pages -- i.e., they're currently maintained
+# as HTML by hand.
 PAGES = \
 	index.html \
 	documentation.html \
@@ -44,8 +36,42 @@ SCREENSHOTS = \
 	screen-wince.jpg \
 	stamp-wince.jpg
 
+# Most of the pages are are derived from the files in the doc
+# directory.  We combine the available chapters of doc text into
+# some standalone pages as well as some compilations.
+T2T_WEBDOCS = \
+	usermanual.html \
+	devguide.html \
+	buglist.html \
+	status.html \
+	todolist.html \
+	changelog.html \
+	installation.html \
+	quickstart.html \
+	platforms.html
+
+
+# should match the list of %!includes in README
+USER_GUIDE_SECTIONS = \
+	Quickstart \
+	Installation \
+	Usage \
+	Configuration \
+	OpenStreetMap \
+	Map-Building
+USER_GUIDE_SECTION_PATHS = $(addprefix ../doc/, $(USER_GUIDE_SECTIONS))
+
+
+# should match the list of %!includes in Developer-Guide
+DEVGUIDE_SECTIONS = \
+	Coding \
+	Map-Building \
+	Map-Format \
+	Map-Designing
+DEVGUIDE_SECTION_PATHS = $(addprefix ../doc/, $(DEVGUIDE_SECTIONS))
+
+
 SUPPORT = \
-	apt_toc.gif \
 	background2.jpg \
 	roadmap-right.png \
 	sitestandard.css
@@ -55,14 +81,11 @@ SUPPORT = \
 #	sitesponsor.html \
 
 
+# everything we'll install on the website
 SITESOURCE = $(SCREENSHOTS) $(T2T_WEBDOCS) $(PAGES) $(SUPPORT)
 
-all: webdoc
-
-
+# flag files that say we did the copy
 SITESOURCE_COPIED = $(addprefix .copied$(SF)-, $(SITESOURCE))
-install: all $(SITESOURCE_COPIED)
-
 
 # use 'make SF=1 install' to send to SF
 ifeq ($(strip $(SF)),)
@@ -94,52 +117,39 @@ roadmap-right.png: ../src/icons/roadmap-right.png
 	cp $< $@
 
 # several parts of the RoadMap website are produced directly from
-# text files in the CVS tree, converted to html using aptconvert.
-# (http://www.xmlmind.com/aptconvert.html)
-
-webdoc: $(T2T_WEBDOCS)
-
-clean-webdoc:
-	rm -f $(T2T_WEBDOCS)
+# text files in the CVS tree, converted to html using txt2tags.
+# (http://txt2tags.sourceforge.net)
 
 # use GNU make's target-specific variables to name the sourcefile
 # for each constructed web page.  the names are somewhat random,
 # so we can't simply use a pattern rule.
-manual.html: DOC_SOURCE=../README
-manual.html: ../README
+usermanual.html: DOC_SOURCE = ../README
+usermanual.html: ../README $(USER_GUIDE_SECTION_PATHS)
 
-makemaps.html: DOC_SOURCE=../howtos/makemaps.txt
-makemaps.html: ../howtos/makemaps.txt
+devguide.html: DOC_SOURCE = ../doc/Developer-Guide
+devguide.html: ../doc/Developer-Guide $(DEVGUIDE_SECTION_PATHS)
 
-buglist.html: DOC_SOURCE=../BUGS
-buglist.html: ../BUGS
+buglist.html: DOC_SOURCE = ../doc/Bugs
+buglist.html: ../doc/Bugs
 
-changelog.html: DOC_SOURCE=../CHANGES
-changelog.html: ../CHANGES
+changelog.html: DOC_SOURCE = ../doc/ChangeLog
+changelog.html: ../doc/ChangeLog
 
-todolist.html: DOC_SOURCE=../TODO
-todolist.html: ../TODO
+todolist.html: DOC_SOURCE = ../doc/ToDo
+todolist.html: ../doc/ToDo
 
-status.html: DOC_SOURCE=../STATUS
-status.html: ../STATUS
+status.html: DOC_SOURCE = ../doc/Status
+status.html: ../doc/Status
 
-installation.html: DOC_SOURCE=../INSTALL
-installation.html: ../INSTALL
+installation.html: DOC_SOURCE = ../doc/Installation
+installation.html: ../doc/Installation
 
-# here's the rule for building webpages from our
-# aptconvert-compatible text files.  we post-process, to add some
-# extra html at the top, to make the docs fit in with the rest of
-# the site.  we also remove absolute references to our own website,
-# so that the links all work properly when installed in a test tree.
+quickstart.html: DOC_SOURCE = ../doc/Quickstart
+quickstart.html: ../doc/Quickstart
 
-#$(APT_WEBDOCS):
-#	aptconvert -pi html showTitle yes -toc -enc ASCII $@ $(DOC_SOURCE)
-#	sed -i \
-#	    -e '/<head>/s/$$/<link href="sitestandard.css" type=text\/css rel=stylesheet>/' \
-#	    -e '/<body>/a \
-#	    <!--#include virtual="navbar.html" -->' \
-#	    -e 's/<body>/<body class="roadmap-doc">/' \
-#	    -e 's;http://'$(OUR_SITE_REFERENCE)'/;;' $@ 
+platforms.html: DOC_SOURCE = ../doc/Platforms
+platforms.html: ../doc/Platforms
+
 
 # here's the rule for building webpages from our
 # txt2tags-compatible text files.  we expand tabs (since they can
@@ -147,11 +157,10 @@ installation.html: ../INSTALL
 # the top, to make the docs fit in with the rest of the site.  we
 # also remove absolute references to our own website, so that the
 # links all work properly when installed in a test tree.
-
 $(T2T_WEBDOCS):
 	expand $(DOC_SOURCE) | \
-	txt2tags --target html \
-	    --toc --infile - --outfile $@
+	(cd ../doc; txt2tags --target html \
+	    --toc --infile - --outfile - ) >$@
 	sed -i \
 	    -e '/<HEAD>/s/$$/<link href="sitestandard.css" type=text\/css rel=stylesheet>/' \
 	    -e '/<BODY .*>/a \
@@ -177,6 +186,13 @@ favicon.ico:
 	ppmtowinicon $$ff >../favicon.ico
 	rm -rf favicon.tmpdir
 
+
+webdoc: $(T2T_WEBDOCS)
+
+install: webdoc $(SITESOURCE_COPIED)
+
+clean-webdoc:
+	rm -f $(T2T_WEBDOCS)
 
 
 clean: clean-webdoc
