Move the location of the API docs to the doc directory that Paul created recently. Add a target to create the docs in the Makefile.

--- a/roadmap/src/Makefile
+++ b/roadmap/src/Makefile
@@ -622,3 +622,9 @@ depends:
 	@echo "Note: run 'make depends' to create dependency files" >&2
 
 -include .depends.mk
+
+#
+# Build API documentation based on doxygen
+#
+apidocs:	roadmap.doxy
+	doxygen roadmap.doxy
