--- a/trunk/roadmap/src/php/Makefile
+++ b/trunk/roadmap/src/php/Makefile
@@ -13,7 +13,7 @@ SOURCE = \
 	osmgetbmap osmgetbmap.php osmgetbmapcore.php
 
 sourcelist:
-	@echo $(SOURCE)
+	@echo Makefile $(SOURCE)
 
 
 depends:
